oncall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oncall
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8888"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oncall
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: metrics
      port: 8888
      protocol: TCP
      targetPort: 8888
